--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <hr />
   <h3>Education</h3>
   <ul>
-  <p>B-Tech 2nd Year Computer Science Engineering Student, MIT-ADT University(2022-2027).</p>
+  <li>><p>B-Tech 2nd Year Computer Science Engineering Student, MIT-ADT University(2022-2027).</p></li>
   </ul>
   <hr />
   <h3>Work Experience</h3>
